elastic/cdp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress
  namespace: elastic-deployment
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - elastic.9-tails-fox.tech
    secretName: tls-secret
  rules:
  - host: elastic.9-tails-fox.tech
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: elastic-es-http
            port:
              name: https
